--- a/src/app/presentation/pages/OrtographyPage/OrtographyPage.component.html
+++ b/src/app/presentation/pages/OrtographyPage/OrtographyPage.component.html
@@ -1,1 +1,11 @@
-<p>OrtographyPage works!</p>,
+<div class="chat-container">
+    <div class="chat-messages">
+
+        <div class="grid gap-y-2">
+            <app-chat-message [text]="'Escribe algo'" />
+
+
+        </div>
+    </div>
+
+</div>
